added searching file

--- a/my-pages/simple-page.html
+++ b/my-pages/simple-page.html
@@ -12,7 +12,7 @@
     <p>Second Paragraph</p>
     
     <br></br>
-    <p>
+    <p class="link">
         <a href="#">Vicky</a>
         <a href="#">Nicky</a>
         <a href="#">Ricky</a>
