updated simple-page file

--- a/my-pages/simple-page.html
+++ b/my-pages/simple-page.html
@@ -8,14 +8,23 @@
 </head>
 <body class="first second">
     <b></b>
-    <p>First Paragraph</p>
-    <p>Second Paragraph</p>
+    <p id="p1">First Paragraph</p>
+    <p id='p2'>Second Paragraph</p>
     
     <br></br>
-    <p class="link">
-        <a href="#">Vicky</a>
-        <a href="#">Nicky</a>
-        <a href="#">Ricky</a>
+    <p id="p3" class="link">
+        <a href="#vicky">Vicky</a>
+        <a href="#nicky">Nicky</a>
+        <a href="#ricky">Ricky</a>
     </p>
+
+    <script type="text/javascript">
+        let greetings = function(){
+            console.log('hello' + ' world');
+        }
+
+        this.greetings();
+    </script>
+    <script src="#"></script>
 </body>
 </html>
