added some files and updated a few

--- a/my-pages/simple-page.html
+++ b/my-pages/simple-page.html
@@ -8,14 +8,19 @@
 </head>
 <body class="first second">
     <b></b>
-    <p id="p1">First Paragraph</p>
+    <p class="paragraph" id="p1">First Paragraph</p>
     <p id='p2'>Second Paragraph</p>
     
     <br></br>
-    <p id="p3" class="link">
-        <a href="#vicky">Vicky</a>
-        <a href="#nicky">Nicky</a>
-        <a href="#ricky">Ricky</a>
+    <p id="p3" class="paragraph hyperlinks">
+        <h2>Once upon a time there were three siblings:</h2>
+        <a class="links" href="#vicky" id="vicky">Vicky</a>
+        <a class="links" href="#nicky" id="nicky">Nicky</a> and
+        <a class="links" href="#ricky" id="ricky">Ricky</a>
+    </p>
+
+    <p class="paragraph">
+        The End
     </p>
 
     <script type="text/javascript">
