added find-all-more-params file

--- a/my-pages/simple-page.html
+++ b/my-pages/simple-page.html
@@ -19,7 +19,13 @@
         <a class="links" href="#ricky" id="ricky">Ricky</a>
     </p>
 
-    <p class="paragraph">
+    <p id="p4" class="paragraph">
+        They were triplets, Vicky and Nicky being the girls and Ricky being the last born of all three siblings.
+    </p>
+    <p id="p5" class="paragraph">
+        As such Vicky and Nicky grew up to become very protective of their brother.
+    </p>
+    <p id="p6" class="paragraph">
         The End
     </p>
 
